[gd_scene load_steps=2 format=3 uid="uid://diswjr5bpm343"]

[ext_resource type="Script" path="res://Scripts/drawing/Body_part_slider.gd" id="1_epulv"]

[node name="BodyPart" type="Node2D"]

[node name="BodyPartTransforming" type="Node2D" parent="."]

[node name="BodyPartFill" type="Polygon2D" parent="BodyPartTransforming"]
color = Color(0.780392, 0.780392, 0.780392, 1)
polygon = PackedVector2Array(0, 0, 4, 0, 7, 3, 7, 7, 7, 10, 7, 13, 2, 17, 0, 17, -2, 17, -7, 13, -7, 10, -7, 7, -7, 3, -4, 0)

[node name="BodyPartBorder" type="Line2D" parent="BodyPartTransforming"]
points = PackedVector2Array(0, 0, 4, 0, 7, 3, 7, 7, 7, 10, 7, 12.5, 2, 16.5, 0, 16.5, -2, 16.5, -7, 12.5, -7, 10, -7, 7, -7, 3, -4, 0)
closed = true
width = 1.0
default_color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 1
offset_left = 13.0
offset_top = 1.0
offset_right = 188.0
offset_bottom = 157.0
scale = Vector2(0.0971583, 0.0958879)
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -2.0
max_value = 2.0
script = ExtResource("1_epulv")
num_point = 2

[node name="HSlider3" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -2.0
max_value = 2.0
script = ExtResource("1_epulv")
num_point = 3

[node name="HSlider2" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -2.0
max_value = 2.0
script = ExtResource("1_epulv")
num_point = 4

[node name="HSlider4" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -2.0
max_value = 2.0
script = ExtResource("1_epulv")
num_point = 5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(7, 11)

[connection signal="value_changed" from="VBoxContainer/HSlider" to="VBoxContainer/HSlider" method="_on_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider3" to="VBoxContainer/HSlider3" method="_on_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider2" to="VBoxContainer/HSlider2" method="_on_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider4" to="VBoxContainer/HSlider4" method="_on_value_changed"]
